Fixed onButtonClicked crashing